  - Keywords are now always written in "portable" style by WRITE, so
    that the reader's keyword style doesn't need to match the writer's.
  - The environment variable `CHICKEN_PREFIX` has been removed.
  - Added the `glob->sre` procedure to the irregex library.
  - Removed the `get-host-name' and `system-information' procedures.
    These are available in the "system-information" egg.

- Module system
  - The compiler has been modularised, for improved namespacing.  This
    means names from the compiler should not leak out into the compiled
    program's (macro) namespace anymore.
  - The core units have been converted to modules under the "chicken"
    namespace.
  - Added support for list-style library names.

- Syntax expander
  - Removed support for (define-syntax (foo e r c) ...), which was
    undocumented and not officially supported anyway.
  - define and friends are now aggressively rejected in "expression
    contexts" (i.e., anywhere but toplevel or as internal defines).
  - define-record and define-record-type now create record types
    which are tagged with the module in which they're defined, so
    predicates no longer return #t for records with the same tag
    defined in another module. This tag is now also available under
    an identifier that matches the record type name (fixes #1342).

- Eggs management
  - Egg-installation and building has been completely overhauled.
  - .meta + .setup files have been merged into a single declarative
    ".egg" file.
  - More static checks for egg descriptions, simplified generation
    of OS-specific build + install commands that is (hopefully)
    more practical for package maintainers.
  - Egg sources are cached locally to reduce download and rebuild
    times.
  - Dropped many obscure or unimportant options and featurey from
    `chicken-install`: (`-keep-installed`, `-reinstall`, `-proxy`,
    `-no-install`, `-username`, `-password`, `-init`, `-deploy`,