@@ -916,19 +916,19 @@
  (test-error (bitwise-and 1 'x))
  (test-error (bitwise-xor 1 'x))
  (test-error (bitwise-ior 1 'x))
- (test-error (bit-set? 1 -1))
- (test-error (bit-set? b1 -1))
- (test-error (bit-set? 1 1.0))
- (test-error (bit-set? 1.0 1))
- (test-equal (bit-set? -1 b1) #t)
- (test-equal (bit-set? 0 b1) #f)
- (test-equal (bit-set? 5 2) #t)
- (test-equal (bit-set? 5 0) #t)
- (test-equal (bit-set? 5 1) #f)
- (test-equal (bit-set? -2 0) #f)
- (test-equal (bit-set? -2 1) #t)
- (test-equal (bit-set? (expt -2 63) 256) #t)
- (test-equal (bit-set? (expt 2 63) 256) #f)
+ (test-error (bit->boolean 1 -1))
+ (test-error (bit->boolean b1 -1))
+ (test-error (bit->boolean 1 1.0))
+ (test-error (bit->boolean 1.0 1))
+ (test-equal (bit->boolean -1 b1) #t)
+ (test-equal (bit->boolean 0 b1) #f)
+ (test-equal (bit->boolean 5 2) #t)
+ (test-equal (bit->boolean 5 0) #t)
+ (test-equal (bit->boolean 5 1) #f)
+ (test-equal (bit->boolean -2 0) #f)
+ (test-equal (bit->boolean -2 1) #t)
+ (test-equal (bit->boolean (expt -2 63) 256) #t)
+ (test-equal (bit->boolean (expt 2 63) 256) #f)
  (test-equal (arithmetic-shift 15 2) 60)
  (test-equal (arithmetic-shift 15 -2) 3)
  (test-equal (arithmetic-shift -15 2) -60)
